# AnansiCapture

./: .gitignore  Cargo.toml  README.md  example.pcap  test.pcap
app/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: capture.rs  error.rs  errors.rs  facade.rs  interface.rs  lib.rs
core/src/observers/: mod.rs  pcap_writer.rs
core/src/packets/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  ftp.rs  http.rs  icmp.rs  icmpv6.rs  igmp.rs  ipv4.rs  ipv6.rs  mod.rs  smb.rs  tcp.rs  tls.rs  udp.rs
gui/: package-lock.json  package.json  svelte.config.js
gui/.svelte-kit/: ambient.d.ts
gui/.svelte-kit/types/: route_meta_data.json
gui/.svelte-kit/types/src/routes/mainPage/: $types.d.ts
gui/.svelte-kit/types/src/routes/startPage/: $types.d.ts
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/mainPage/: +page.svelte
gui/src/styles/: app.css  chooseInterfaceMenuStyles.css  mainPageStyles.css
