[package]
name = "anansi-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Command-line interface for AnansiCapture network analysis"
license.workspace = true
repository.workspace = true

[[bin]]
name = "anansi"
path = "src/main.rs"

[dependencies]
anansi-core = { path = "../core" }
tokio = { workspace = true, features = ["full", "rt-multi-thread", "signal"] }
clap = { version = "4.0", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

