[package]
name = "anansi-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI interface for AnansiCapture"
license.workspace = true
repository.workspace = true

[[bin]]
name = "anansi"
path = "src/main.rs"

[dependencies]
anansi-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
pcap = "0.8"
pnet = "0.35.0"
colored = "2.1"
chrono = "0.4"

