[package]
name = "anansi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core networking library for AnansiCapture"

[build-dependencies]
cmake = "0.1"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
thiserror.workspace = true

pcap = "0.8"
async-trait = "0.1"
futures = "0.3"
