[package]
name = "anansi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core networking library for AnansiCapture"

[dependencies]
pnet = "0.35.0"
pcap = "0.8"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.7", features = ["v4"] }
colored = "2.0"
anyhow = "1.0"
