[package]
name = "anansi-gui"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "anansi_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
anansi-core = { path = "../../core" }

# Data Synchronization/Asynchronous Processing
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
parking_lot = "0.12"
futures = "0.3"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
